Added routes into README.org

--- a/README.org
+++ b/README.org
@@ -54,3 +54,7 @@ fastapi dev main.py
 
 ** Что запускается первым?
 Первым запускается бот, затем restapi.
+
+* Пути
++ =/logs= - достает все логи в виде json массива;
++ =/logs/{user_id}=  - достает записи только определенного пользователя по id. 
